# spreadsheet

./: Cargo.toml  Dockerfile  DockerfileEnvoy  Makefile  README.md  build.rs  docker-compose.yml  envoy.yaml  run.sh  shell.nix
frontend/: api_grpc_web_pb.js  api_pb.js  client.js  envoy.yaml  package.json
frontend/spreadsheet-client/: package.json
frontend/spreadsheet-client/src/: App.css  App.js  FormulaBar.js  TableCell.css  TableCell.js  api_grpc_web_pb.js  api_pb.js  index.js
rpc_client/: Cargo.toml
rpc_client/src/: api.rs  api_grpc.rs
src/: build.rs  client.rs  main.rs  models.rs  server.rs
src/client/: cell.ui  main.rs  style.css
src/client/spreadsheet_cell_object/: imp.rs  mod.rs
src/client/ss_cell/: imp.rs  mod.rs
src/models/: cell.rs  context.rs  mod.rs  rect.rs
src/parser/: functions.rs  lexer.rs  mod.rs  parser.rs  test.rs
src/proto/grpc/: api.proto  api.rs  api_grpc.rs
src/proto/grpc/doc/: index.html
src/service/: formula_graph.rs  formula_graph_test.rs  mod.rs  service.rs
src/spreadsheet_service/: lib.rs
src/spreadsheet_service/models/: cell.rs  context.rs  rect.rs
src/spreadsheet_service/parser/: lexer.rs  mod.rs  parser.rs  test.rs
src/spreadsheet_service/service/: formula_graph.rs  formula_graph_test.rs  rpc_service.rs  service.rs
src/templates/: build.rs  cell.ui  resources.gresource  resources.gresource.xml
