[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio-sys = { version = "0.8.1" }
grpcio = {  version = "0.8.2" }
futures = "0.3.14"
protobuf = { version = "2.22.1" }


[build-dependencies]
protoc-grpcio = "3.0.0"
