[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio-sys = { version = "0.8.1" }
grpcio = {  version = "0.8.2", features = ["openssl", "protobuf-codec"], default-features = false }
futures = "0.3.14"
protobuf = { version = "2.22.1" }
log = "0.4"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "4.0"
slog-scope = "4.0"
slog-term = "2.2"
rstar = "0.8.2"

[build-dependencies]
protoc-grpcio = "3.0.0"

[[bin]]
name = "spreadsheet_client"
path = "src/client.rs"

[[bin]]
name = "spreadsheet_server"
path = "src/server.rs"
