[package]
name = "spreadsheet"
version = "0.1.0"
edition = "2018"
# build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grpcio-sys = { version = "0.12.1" }
grpcio = {  version = "0.12.1", features = ["openssl", "protobuf-codec"], default-features = false }
futures = "0.3.14"
protobuf = { version = "2.22.1" }
pango = "0.17.4"
log = "0.4"
slog = "2.0"
slog-async = "2.1"
slog-stdlog = "4.0"
slog-scope = "4.0"
once_cell = "1.0"
slog-term = "2.2"
rstar = "0.8.2"
gtk = {version = "*", package = "gtk4", features = ["v4_8"]}
gdk4 = "0.6.2"
gio = "0.17.3"
glib-macros = "0.17.3"
rpc_client = { path = "rpc_client" }
glib-build-tools = "0.17"

[build-dependencies]
protoc-grpcio = "3.0.0"
glib-build-tools = "0.17"

[[bin]]
name = "spreadsheet_server"
path = "src/server.rs"


[[bin]]
name = "client_app"
path = "src/client/main.rs"

# target to build Docker image with
[[bin]]
name = "rust-docker"
path = "src/main.rs"

[lib]
name = "spreadsheet_service"
path = "src/spreadsheet_service/lib.rs"
