[package]
name = "rpc_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = { version = "2.21.0" }
grpcio-sys = { version = "0.12.1" }
grpcio = {  version = "0.12.1", features = ["openssl", "protobuf-codec"], default-features = false }
futures = "0.3.14"

[build-dependencies]
protoc-grpcio = "3.0.0"
